<resources>
    <string name="app_name">HWRU</string>
    <string name="welcome">WELCOME</string>
    <string name="how_well_are_u">HOW WELL ARE U?</string>
    <string name="personal_planner">PERSONAL PLANNER</string>
    <string name="email">EMAIL:</string>
    <string name="please_enter_your_email">Email/Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">PASSWORD:</string>
    <string name="please_enter_your_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="how_well_r_u">How Well Are U?</string>
    <string name="timetable">Timetable</string>
    <string name="calendar">Calendar</string>
    <string name="to_do_list">To-Do List</string>
    <string name="notebook">Notebook</string>
    <string name="health">Health</string>
    <string name="bmi">BMI</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="sounds">Sounds</string>
    <string name="account">Account</string>
    <string name="themes">Themes</string>
    <string name="back_up_storage">Back up storage</string>
    <string name="menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="incognito5">Incognito5</string>
    <string name="incognito5_gmail_com">incognito5@gmail.com</string>
    <string name="please_enter_your_username">Username/Email</string>
    <string name="username">USERNAME</string>
    <string name="username_">USERNAME:</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="register_here">Register Here</string>
    <string name="name">NAME:</string>
    <string name="please_enter_your_name">Name</string>
    <string name="set_dark">Dark Mode</string>
    <string name="enable_dark_mode">Enable</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="title_activity_delete_account">DeleteAccount</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="restore_data">Restore Data</string>
    <string name="back_up_data">Back up data</string>
    <string name="abt_backup">Back up app data and other settings.</string>
    <string name="restore_abt">When reinstalling the app, restore backed up settings and data</string>
    <string name="aboutApp">How Well Are U? is a free utility application designed to assist students with their distance learning activities. It incorporates tools like a timetable, a calendar, a notebook, and a to-do list that students can use for their schoolwork. Users can also monitor their body mass index (BMI) with the app. HWRU gives students the flexibility to remain organized and on time.</string>
    <string name="aboutUs">The Incognito Five consists of a group of five 2nd-year students at Polytechnic University of the Philippines in Manila who are in their second year of study in computer engineering. The main goal of Incognito Five is to contribute to the general good of society. Our sole vision as an organization is to meet the needs of our clients by providing services that meet international standards and compliance with our clients\' requirements. We, at Incognito Five, are dedicated to offering exceptional quality that makes a positive impact on the lives of each person.</string>
    <string name="course">COURSE</string>
    <string name="course_name">Subject Name</string>
    <string name="course_code">Subject Code</string>
    <string name="professor">Professor</string>
    <string name="room_location">Room/Location</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_course">Add Course</string>
    <string name="courses">Courses</string>
    <string name="course_menu">Course menu</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string-array name="week">
        <item> Monday </item>
        <item> Tuesday </item>
        <item> Wednesday </item>
        <item> Thursday </item>
        <item> Friday </item>
        <item> Saturday </item>
        <item> Sunday </item>
    </string-array>
    <string name="title_activity_alarm_sounds_list">AlarmSoundsList</string>
    <string name="title_activity_sounds">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="please_reenter_password">Reenter Password</string>
    <string name="to_do_lists">To-Do List</string>
    <string name="mission">We at Incognito Five are focused on providing excellence: excellence that improves the lives of individuals and helps sustain the world\'s assets. As a global company, Incognito Five strives hard to acquire the world\'s trust. The company aims to become the supplier of choice, deliver premium products and services, and create value for our customers</string>
</resources>