<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/profile">

            <menu>

                <item
                    android:id="@+id/account"
                    android:icon="@drawable/profile_icon"
                    android:title="@string/account">

                </item>
                <item
                    android:id="@+id/back_up_storage"
                    android:icon="@drawable/back_up_icon"
                    android:title="@string/back_up_storage">

                </item>
                <item
                    android:id="@+id/themes"
                    android:icon="@drawable/themes_icon"
                    android:title="@string/themes">

                </item>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/about_us">

            <menu>
                <item
                    android:id="@+id/help"
                    android:icon="@drawable/help_icon"
                    android:title="@string/help">

                </item>
            </menu>

        </item>
    </group>

    <group android:checkableBehavior="single">

        <item android:title="@string/settings">
            <menu>
                <item
                    android:id="@+id/sounds"
                    android:icon="@drawable/sounds_icon"
                    android:title="@string/sounds">

                </item>
            </menu>
        </item>
    </group>


</menu>
