<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navidrawer"
    app:startDestination="@id/nav_home">

    <activity
        android:id="@+id/nav_home"
        android:name="com.example.myapplication1.Homepage"
        android:label="@string/home"
        tools:layout="@layout/activity_homepage" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.myapplication1.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_backup"
        android:name="com.example.myapplication1.BackUpFragment"
        android:label="@string/back_up_storage"
        tools:layout="@layout/fragment_back_up"/>

    <fragment
        android:id="@+id/nav_themes"
        android:name="com.example.myapplication1.ThemesFragment"
        android:label="@string/themes"
        tools:layout="@layout/fragment_themes"/>

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myapplication1.Help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help"/>

    <fragment
        android:id="@+id/nav_sounds"
        android:name="com.example.myapplication1.SoundsFragment"
        android:label="@string/sounds"
        tools:layout="@layout/fragment_sounds"/>

</navigation>