<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Timetable.TimetableSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_tbsettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/next"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:title="Settings" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_tbsettings">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:text="Turn on reminder" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_reminder"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:text="What time do you want to be reminded?" />

            <TimePicker
                android:id="@+id/tp_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tp_reminder"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:text="When do you want to be reminded?" />

            <HorizontalScrollView
                android:id="@+id/week_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_below="@+id/tv2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/mon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/monday" />

                    <CheckBox
                        android:id="@+id/tues2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/tuesday" />

                    <CheckBox
                        android:id="@+id/wed2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/wednesday" />

                    <CheckBox
                        android:id="@+id/thurs2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/thursday" />

                    <CheckBox
                        android:id="@+id/fri2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/friday" />

                    <CheckBox
                        android:id="@+id/sat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/saturday" />

                    <CheckBox
                        android:id="@+id/sun2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/sunday" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/save_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/week_reminder"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/primary"
                android:text="@string/save"
                app:backgroundTint="@color/primary" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>